# monsoon

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  GrafanaDashBoard.md  LICENSE  Makefile  NOTICE.txt  README.md  build.sh  cert.config.template  default.conf.template  get_new_data_from_switch.sh  makeDocker.sh  makeDockerAndPush.sh  pyproject.toml
.github/workflows/: docker-publish.yml
config/: prometheus.yaml  prometheus.yml  sonic_exporter_grafana_dashboard.json
deploy/: docker-compose.yml  install.sh  top_process.json  top_process.py  top_processes.service  uninstall.sh
docs/x86_64-accton_as5835_54t-r0/: sensors.conf
docs/x86_64-accton_as5835_54t-r0/B/: sensors.conf
docs/x86_64-accton_as7326_56x-r0/: sensors.conf
docs/x86_64-accton_as7326_56x-r0/B/: sensors.conf
docs/x86_64-accton_as7726_32x-r0/: sensors.conf
docs/x86_64-accton_as7726_32x-r0/B/: sensors.conf
src/node_exporter/: node_exporter.conf
src/python_exporter/: exporter.py  python_exporter.conf
src/sonic_exporter/: __init__.py  __main__.py  bgp.py  constants.py  converters.py  crm.py  custom_metric_types.py  db_util.py  enums.py  evpn.py  exporter.py  fan.py  interface.py  mclag.py  ntpq.py  psu.py  sag.py  sonic_exporter.conf  sys_class_hwmon.py  sys_class_net.py  system.py  utilities.py  vtysh.py  vxlan.py
src/sonic_exporter/config/: logging.yml
src/sonic_exporter/test/: __init__.py  mock_db.py  mock_ntpq.py  mock_sys_class_hwmon.py  mock_sys_class_net.py  mock_vtysh.py
src/sonic_exporter/test/resources/: README.md  x86_64-accton_as7726_32x-r0.hwmon.json  x86_64-accton_as9716_32d-r0.hwmon.json
src/sonic_exporter/test/ressources/: default.json  x86_64-accton_as5835_54t-r0.appl.json  x86_64-accton_as5835_54t-r0.counters.json  x86_64-accton_as5835_54t-r0.frr.show_evpn_vni_detail.json  x86_64-accton_as5835_54t-r0.hwmon.json  (+27 more)
(+49 files in other folders)
