[tool.poetry]
name = "sonic_exporter"
version = "0.0.0"
description = "\"Sonic Exporter\""
authors = ["Marcel Fest <marcel.fest@telekom.de>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.12.0"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sonic_exporter = 'sonic_exporter.exporter:cli'